plugins/systembell: Throttle audio bell

When too many bell requests are made simultaneously the resulting audio
playback can affect system performance, to the point where it completely
freezes.

Since playing too many audio bells at the same time is nonsensical anyway
limit ourselves to one every 100ms.

This interval is fairly arbitrary, but seems to work well enough in practice.
It still allows for two very fast keypresses to each trigger a distinctive bell.

BUG: 500916